change normal font-weight

--- a/mdb/mdbvue/scss/core/_typography.scss
+++ b/mdb/mdbvue/scss/core/_typography.scss
@@ -3,11 +3,11 @@
 // General properties
 body {
   font-family: $mdb-font-family;
-  font-weight: $font-weight-light;
+  font-weight: $font-weight-normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: $font-weight-light;
+  font-weight: $font-weight-normal;
 }
 
 // Blockquote
